# qubes-split-onlykey

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  Makefile  README.md  clippy.toml
.build/: build.sh  fedora-requirements.txt
post-install.d/: 49-pipx-onlykey-deps.sh
rpm_spec/: split-onlykey-dom0.spec.in  split-onlykey.spec.in
src/: Cargo.toml
src/client/: ok-ssh-proxy  profile.sh  rc.local  ssh-socat
src/dom0/: 49-onlykey.policy
src/server/: install.sh  onlykey.SshAgent  qubes.SshAgent
src/server/daemon-factory/: Cargo.toml
src/server/daemon-factory/src/: lib.rs  main.rs  zbus_proxy.rs
src/server/lib/: Cargo.toml
src/server/lib/src/: lib.rs
src/server/socket-proxy/: Cargo.toml
src/server/socket-proxy/src/: main.rs
src/service/: onlykey-agent-daemon-factory  onlykey-agent-socket  onlykey.SshAgent
src/systemd/: ok-ssh-proxy-tunnel.service  ok-ssh-proxy.service  ok-ssh-proxy.socket  onlykey-agent-daemon-factory.socket  onlykey-agent-daemon-factory@.service  onlykey-agent-daemon@.service  onlykey-agent.service  onlykey-agent.socket
src/vm/: 49-onlykey.rules  ok-proxy-ssh-agent  ok-ssh-proxy  onlykey-agent.service  onlykey-agent.socket  onlykey.SshAgent
srv/salt/: sys-onlykey.sls  sys-onlykey.top
systemd/: 49-onlykey-agent.preset  ok-ssh-proxy.service  ok-ssh-proxy.socket  onlykey-agent-daemon-factory.socket  onlykey-agent-daemon-factory@.service  onlykey-agent-daemon@.service  onlykey-agent-daemon@.socket  onlykey-agent-sdnotify@.service  onlykey-agent-sdnotify@.socket  onlykey-agent.service  onlykey-agent.socket
