[package]
name = "daemon-factory"
version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }

[[bin]]
name = "agent-daemon-factory"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
systemd-journal-logger = { workspace = true }

futures-util = { workspace = true }
log = { workspace = true }
server_lib = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
