[package]
name = "socket-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
listenfd = "1.0.2"
log = { version = "0.4.25", features = ["std"] }
tokio = { version = "1.43.0", features = ["full", "net"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
zbus = { version = "5.5.0", features = ["tokio"] }
