[package]
name = "socket-proxy"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }

[[bin]]
name = "onlykey-agent-socket-proxy"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
listenfd = { workspace = true }
zbus = { workspace = true, features = ["tokio"] }
server_lib = { workspace = true }
sd-notify = { workspace = true }

[dev-dependencies]
server_lib = { workspace = true }
